// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`an argument toJSON with a name 1`] = `
{
  "inputs": [
    {
      "css": "@include x($baz: qux)",
      "hasBOM": false,
      "id": "<input css _____>",
    },
  ],
  "name": "baz",
  "raws": {},
  "rest": false,
  "sassType": "argument",
  "value": <qux>,
}
`;

exports[`an argument toJSON with no name 1`] = `
{
  "inputs": [
    {
      "css": "@include x(qux)",
      "hasBOM": false,
      "id": "<input css _____>",
    },
  ],
  "raws": {},
  "rest": false,
  "sassType": "argument",
  "value": <qux>,
}
`;

exports[`an argument toJSON with rest 1`] = `
{
  "inputs": [
    {
      "css": "@include x(qux...)",
      "hasBOM": false,
      "id": "<input css _____>",
    },
  ],
  "raws": {},
  "rest": true,
  "sassType": "argument",
  "value": <qux>,
}
`;
